--- a/source/api/_reports.html.md.erb
+++ b/source/api/_reports.html.md.erb
@@ -45,8 +45,8 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| requisitionIdentifier | body | Requisition report is associated to | Yes | string |
-| reportContent | body | Base64 content of report | Yes | string |
+| `requisitionIdentifier` | body | Requisition report is associated to | Yes | `string` |
+| `reportContent` | body | Base64 content of report | Yes | `string` |
 
 **Responses**
 
