--- a/source/api/_workflow_definitions.html.md.erb
+++ b/source/api/_workflow_definitions.html.md.erb
@@ -41,7 +41,7 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | query | Filters workflow definitions by organization. | Yes | integer |
+| `organizationId` | query | Filters workflow definitions by organization. | Yes | `integer` |
 
 **Responses**
 
