--- a/source/webhooks.html.md.erb
+++ b/source/webhooks.html.md.erb
@@ -44,11 +44,11 @@ Ovation supports sending web-hooks for the following events:
 
 | Name | Description |
 | ---- | ----------- |
-| requisition_signed_accession | Triggered when the requisition accession_status is set to signed  |
-| report_signed | Triggered when a report status change to signed |
-| report_corrected | Triggered when a report status change to signed, but with one associated report through the same associated_report_configuration |
-| sample_rejected | Triggered when a sample is confirmed as rejected |
-| requisition_canceled | Triggered when a requisition is canceled |
+| `requisition_signed_accession` | Triggered when the requisition accession_status is set to signed  |
+| `report_signed` | Triggered when a report status change to signed |
+| `report_corrected` | Triggered when a report status change to signed, but with one associated report through the same associated_report_configuration |
+| `sample_rejected` | Triggered when a sample is confirmed as rejected |
+| `requisition_canceled` | Triggered when a requisition is canceled |
 
 ## Webhook Error Handling
 
