--- a/source/webhooks/_requisition_canceled.html.md.erb
+++ b/source/webhooks/_requisition_canceled.html.md.erb
@@ -16,9 +16,9 @@
 
 | Name | Type | Description |
 | ---- | ---- | ----------- |
-| eventType | integer | Filters workflow definitions by organization. |
-| eventDetails | string | Details | related to the action performed |
-| requisitionIdentifier | string | Requisition identifier |
-| providerAccountName | string | Provider account name |
-| providerAccountNumber | string | Provider account number |
-| physicianNPI | string | The Physician NPI identifier |
+| `eventType` | `integer` | Filters workflow definitions by organization. |
+| `eventDetails` | `string` | Details | related to the action performed |
+| `requisitionIdentifier` | `string` | Requisition identifier |
+| `providerAccountName` | `string` | Provider account name |
+| `providerAccountNumber` | `string` | Provider account number |
+| `physicianNPI` | `string` | The Physician NPI identifier |
