--- a/source/webhooks/_requisition_signed_accession.html.md.erb
+++ b/source/webhooks/_requisition_signed_accession.html.md.erb
@@ -13,6 +13,6 @@
 
 | Name | Type | Description |
 | ---- | ---- | ----------- |
-| eventType | integer | Filters workflow definitions by organization. |
-| requisitionIdentifier | string | Requisition identifier |
-| projectTemplateId | integer | Associated Project Template |
+| `eventType` | `integer` | Filters workflow definitions by organization. |
+| `requisitionIdentifier` | `string` | Requisition identifier |
+| `projectTemplateId` | `integer` | Associated Project Template |
