--- a/source/webhooks/_sample_rejected.html.md.erb
+++ b/source/webhooks/_sample_rejected.html.md.erb
@@ -21,14 +21,14 @@
 
 | Name | Type | Description |
 | ---- | ---- | ----------- |
-| eventType | integer | Filters workflow definitions by organization. |
-| eventDetails | string | Details | related to the action performed |
-| requisitionIdentifier | string | Requisition identifier |
-| sampleIdentifier | string | Sample identifier |
-| patientMRN | string | Patient medical record number |
-| sampleGroup | string | Sample group name |
-| sampleLabel | string | Sample Label description |
-| providerAccountName | string | Provider account name |
-| providerAccountNumber | string | Provider account number |
-| physicianNPI | string | The Physician NPI identifier |
-| reportDownloadLink | string | The link to download the report file<br>(A GET call to this link with the same Bearer Token header used in the V3 API calls will allow this report to be downloaded) |
+| `eventType` | `integer` | Filters workflow definitions by organization. |
+| `eventDetails` | `string` | Details | related to the action performed |
+| `requisitionIdentifier` | `string` | Requisition identifier |
+| `sampleIdentifier` | `string` | Sample identifier |
+| `patientMRN` | `string` | Patient medical record number |
+| `sampleGroup` | `string` | Sample group name |
+| `sampleLabel` | `string` | Sample Label description |
+| `providerAccountName` | `string` | Provider account name |
+| `providerAccountNumber` | `string` | Provider account number |
+| `physicianNPI` | `string` | The Physician NPI identifier |
+| `reportDownloadLink` | `string` | The link to download the report file<br>(A GET call to this link with the same Bearer Token header used in the V3 API calls will allow this report to be downloaded) |
