--- a/source/api/_sales_groups.html.md.erb
+++ b/source/api/_sales_groups.html.md.erb
@@ -71,26 +71,26 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | body | Organization ID | Yes | integer |
-| salesGroup | body | Sales Group Record | Yes | json |
+| `organizationId` | body | Organization ID | Yes | `integer` |
+| `salesGroup` | body | Sales Group Record | Yes | `json` |
 
 **Sales Group Parameters**
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| name | salesGroup | Name of the sales group | Yes | string |
-| parentId | salesGroup | Sales rep parent ID | No | integer |
-| associatedSalesReps | salesGroup | List of associated sales rep records | No | json |
+| `name` | salesGroup | Name of the sales group | Yes | `string` |
+| `parentId` | salesGroup | Sales rep parent ID | No | `integer` |
+| `associatedSalesReps` | salesGroup | List of associated sales rep records | No | `json` |
 
 **Associated Sales Rep Parameters**
 
 | Name | Located in | Description | Required | Type | Value |
 | ---- | ---------- | ----------- | -------- | ---- | ----- |
-| firstName | associatedSalesRep | First name of associated sales rep | Yes | string ||
-| lastName | associatedSalesRep | Last name of associated sales rep | Yes | string ||
-| email | associatedSalesRep | Email of associated sales rep | Yes | string ||
-| officePhoneNumber | associatedSalesRep | Office phone number of associated sales rep | No | string ||
-| hasRequisitionAccess | associatedSalesRep | Mark as true if associated sales rep has access to requisition information | No | boolean | `true`, `false` |
+| `firstName` | associatedSalesRep | First name of associated sales rep | Yes | `string` ||
+| `lastName` | associatedSalesRep | Last name of associated sales rep | Yes | `string` ||
+| `email` | associatedSalesRep | Email of associated sales rep | Yes | `string` ||
+| `officePhoneNumber` | associatedSalesRep | Office phone number of associated sales rep | No | `string` ||
+| `hasRequisitionAccess` | associatedSalesRep | Mark as true if associated sales rep has access to requisition information | No | `boolean` | `true`, `false` |
 
 **Responses**
 
@@ -144,11 +144,11 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | query | Organization id | Yes | integer |
-| name | query | Sales Group Name. | No | string |
-| parentId | query | Sales Group Parent ID. | No | integer |
-| page | query | Page of results. | No | integer |
-| perPage | query | Results per page. Maximum of 5000. | No | integer |
+| `organizationId` | query | Organization id | Yes | `integer` |
+| `name` | query | Sales Group Name. | No | `string` |
+| `parentId` | query | Sales Group Parent ID. | No | `integer` |
+| `page` | query | Page of results. | No | `integer` |
+| `perPage` | query | Results per page. Maximum of 5000. | No | `integer` |
 
 **Responses**
 
@@ -228,26 +228,26 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | body | Organization ID | Yes | integer |
-| salesGroup | body | Sales Group Record | Yes | json |
+| `organizationId` | body | Organization ID | Yes | `integer` |
+| `salesGroup` | body | Sales Group Record | Yes | `json` |
 
 **Sales Group Parameters**
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| name | salesGroup | Name of the sales group | Yes | string |
-| parentId | salesGroup | Sales rep parent ID | No | integer |
-| associatedSalesReps | salesGroup | List of associated sales rep records | No | json |
+| `name` | salesGroup | Name of the sales group | Yes | `string` |
+| `parentId` | salesGroup | Sales rep parent ID | No | `integer` |
+| `associatedSalesReps` | salesGroup | List of associated sales rep records | No | `json` |
 
 **Associated Sales Rep Parameters**
 
 | Name | Located in | Description | Required | Type | Value |
 | ---- | ---------- | ----------- | -------- | ---- | ----- |
-| firstName | associatedSalesRep | First name of associated sales rep | Yes | string ||
-| lastName | associatedSalesRep | Last name of associated sales rep | Yes | string ||
-| email | associatedSalesRep | Email of associated sales rep | Yes | string ||
-| officePhoneNumber | associatedSalesRep | Office phone number of associated sales rep | No | string ||
-| hasRequisitionAccess | associatedSalesRep | Mark as true if associated sales rep has access to requisition information | No | boolean | `true`, `false` |
+| `firstName` | associatedSalesRep | First name of associated sales rep | Yes | `string` ||
+| `lastName` | associatedSalesRep | Last name of associated sales rep | Yes | `string` ||
+| `email` | associatedSalesRep | Email of associated sales rep | Yes | `string` ||
+| `officePhoneNumber` | associatedSalesRep | Office phone number of associated sales rep | No | `string` ||
+| `hasRequisitionAccess` | associatedSalesRep | Mark as true if associated sales rep has access to requisition information | No | `boolean` | `true`, `false` |
 
 **Responses**
 
@@ -307,8 +307,8 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| id | path | Sales Group id | Yes | integer |
-| organizationId | query | Organization id | Yes | integer |
+| `id` | path | Sales Group id | Yes | `integer` |
+| `organizationId` | query | Organization id | Yes | `integer` |
 
 **Responses**
 
@@ -353,8 +353,8 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| id | path | Sales Group id | Yes | integer |
-| organizationId | query | Organization id | Yes | integer |
+| `id` | path | Sales Group id | Yes | `integer` |
+| `organizationId` | query | Organization id | Yes | `integer` |
 
 **Responses**
 
