--- a/source/api/_resources.html.md.erb
+++ b/source/api/_resources.html.md.erb
@@ -58,12 +58,12 @@ puts response.read_body
 
 | Name | Located in | Description | Required | Type |
 | ---- | ---------- | ----------- | -------- | ---- |
-| organizationId | body | Organization ID | Yes | integer |
-| requisitionIdentifier | body | Identifier of requisition sample is associated to | Yes | string |
-| sampleIdentifier | body | Identifier of sample resource is associated to | Yes | string |
-| resourceGroupName | body | Name of Resource Group defined in workflow definition to find resource | Yes | string |
-| fileContent | body | Base64-encoded data of initial revision. Use :resource_id if file is already uploaded | Yes | Base64 string |
-| fileName | body | File name (optional). If not specified file name will be 'sample_identifier_timestamp' | No | string |
+| `organizationId` | body | Organization ID | Yes | `integer` |
+| `requisitionIdentifier` | body | Identifier of requisition sample is associated to | Yes | `string` |
+| `sampleIdentifier` | body | Identifier of sample resource is associated to | Yes | `string` |
+| `resourceGroupName` | body | Name of Resource Group defined in workflow definition to find resource | Yes | `string` |
+| `fileContent` | body | Base64-encoded data of initial revision. Use :resource_id if file is already uploaded | Yes | `Base64 string` |
+| `fileName` | body | File name (optional). If not specified file name will be 'sample_identifier_timestamp' | No | `string` |
 
 **Responses**
 
